--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install Dependencies
-        run: npm install
+      #- name: Install Dependencies
+       # run: npm install
        # Runs a set of commands to build
       - name: Build
         run: npm run build --prod
