--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.11.1",
     "ngx-device-detector": "^7.0.0",
     "rxjs": "~7.5.0",
