--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,6 +2,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "useDefineForClassFields": false,
+    "target": "ES2022",
     "outDir": "./out-tsc/app",
     "types": []
   },
