--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "src",
-    "paths": {
+   "useDefineForClassFields": false,
+    "paths": {  
       "@app/*": ["@app/*"]
     },
     "outDir": "./dist/out-tsc",
@@ -20,7 +21,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "es2020",
     "lib": [
       "es2020",
