--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -2,6 +2,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "useDefineForClassFields": false,
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine"
