--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -41,8 +41,8 @@ jobs:
 
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
-       #  with:
-        #   path: dist/my-portfolio/browser 
+        with:
+          path: dist/my-portfolio/ 
 
       # 🚀 Deploy to GitHub Pages
   deploy:
