--- a/angular.json
+++ b/angular.json
@@ -18,8 +18,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": {
-              "base": "dist/my-portfolio",
-              "browser": "my-portfolio"
+              "base": "dist/my-portfolio"
             },
             "index": "src/index.html",
             "polyfills": [
