--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -37,12 +37,11 @@ jobs:
       # 🏗️ Build the Angular app for production
       - name: Build Angular app
         run: |
-          npm run build -- --configuration production --base-href /my-portfolio/ --output-path dist/browser
-
+          npm run build -- --configuration production --base-href /my-portfolio/ 
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist/browser
+          path: dist/my-portfolio
 
       # 🚀 Deploy to GitHub Pages
   deploy:
