--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist/my-portfolio
+          path: dist/my-portfolio/browser
 
       # 🚀 Deploy to GitHub Pages
   deploy:
